# enge-sidecar-redis

./: .dockerignore  Cargo.toml  Dockerfile  Settings.toml  build_image.sh  curl_command_populate_db
bench/k6/: README.md  bench.js  test.js
src/: main.rs
src/adapters/: repository.rs
src/configs/: mod.rs  reader_cfg.rs
src/domain/: request.rs  responders.rs
src/service/: hash_service.rs  list_service.rs  mod.rs  set_service.rs  string_service.rs  zset_service.rs
src/test/: mod.rs  test_main.rs
