[package]
name = "enge-sidecar-redis"
version = "0.1.0"
authors = ["rogerio.ferreira@ibm.com <Rogerio Ferreira>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
serde-redis = "0.10.0"
config="0.11.0"
log="0.4.14"
redis={ version = "0.20.0",  default-features = false, features = ["cluster", "connection-manager", "tokio-comp"] }
async-trait = "0.1"
actix-web = "3"
lazy_static = "1.4.0"
regex = "1"
strum_macros = "0.20.1"
strum= "0.20.0"
serde_derive = "1.0.125"
serde_json = "1.0.64"

[dev-dependencies]
futures-util = "0.3.2"
