[package]
name = "enge-sidecar-redis"
version = "0.1.0"
authors = ["rogerio.ferreira@ibm.com <Rogerio Ferreira>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.6", features = ["macros"] }
serde-redis = "0.10.0"
config="0.11.0"
log="0.4.14"
redis={ version = "0.20.0",  default-features = false, features = ["cluster", "connection-manager", "tokio-comp"] }
async-trait = "0.1.50"
actix-web = "4.0.0-beta.6"
lazy_static = "1.4.0"
regex = "1"
strum_macros = "0.20.1"
strum= "0.20.0"
serde_derive = "1.0.125"
serde_json = "1.0.64"
url = "2.2.2"
redis_cluster_async = "0.6.0"

[dev-dependencies]
futures-util = "0.3.2"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
